apps/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "local-selfsigned"
  labels:
    app.kubernetes.io/part-of: gitops
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - prowlarr.home.dcxxiv.com
      secretName: prowlarr-tls
  rules:
    - host: prowlarr.home.dcxxiv.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
